<resources>
    <string name="app_name">Rumah Vaksin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="button_open">Apply</string>>
    <string name="edit">    Edit</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Enter email</string>
    <string name="paswword">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot">Lupa Password ?</string>
    <string name="register">Daftar Akun Baru</string>
    <string name="title_activity_egister">egister</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_maps">Map</string>
</resources>
