<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ghost.rumahvaksin.Home"
    tools:showIn="@layout/app_bar_home"
    android:background="#fcfcfc">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_user"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:layout_above="@+id/editText_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:hint="@string/paswword"
        android:layout_above="@+id/button_login"
        android:layout_alignStart="@+id/editText_user" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:id="@+id/button_login"
        android:textColor="#f6f6fa"
        android:background="#4465e9"
        android:layout_above="@+id/text_forgot"
        android:layout_alignStart="@+id/editText_password"
        android:layout_alignEnd="@+id/editText_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgot"
        android:id="@+id/text_forgot"
        android:autoLink="web"
        android:textColor="#1d72b4"
        android:layout_marginBottom="119dp"
        android:layout_above="@+id/text_register"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_above="@+id/editText_user"
        android:src="@drawable/logo2"
        android:nestedScrollingEnabled="false"
        android:layout_alignEnd="@+id/editText_user"
        android:layout_alignStart="@+id/editText_user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register"
        android:id="@+id/text_register"
        android:layout_marginBottom="72dp"
        android:clickable="true"
        android:textColor="#3e51ca"
        android:singleLine="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
